<resources>
    <string name="app_name" translatable="false">Epicture</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_logo">App logo</string>
    <string name="logo_search">Logo search engine</string>
    <string name="search_button">Search button</string>
    <string name="search_title_menu">Search</string>
    <string name="flickr_title_menu" translatable="false">Flickr</string>
    <string name="imgur_title_menu" translatable="false">Imgur</string>
    <string name="favorite_title_menu">Favorites</string>
    <string name="action_sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_date">Sort by date</string>
    <string name="download">Download the file</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string-array name="language">
        <item>@string/english</item>
        <item>@string/french</item>
    </string-array>
    <string name="action_profile">Profile</string>
</resources>
